# FunWithCpp

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/actions/cmake-and-ctest/: action.yml
.github/actions/get-cxx-compiler/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: clang-format-lint.yml  clang-tidy.yml  cmake-and-ctest.yml  codeql.yml
FunWithMoving/: CMakeLists.txt  README.md  funwithmoving.cpp
